Refactor: Use toList() and isEmpty() for improved readability and consistency